--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,7 @@ nav{
     justify-content: space-between;
     align-items:center;
     flex-wrap: nowrap;
-    background-color: #FFFFFF;
+    background-color: white;
     font-size: 1.4em;
     margin-top: 1em;
 }
