--- a/css/styles.css
+++ b/css/styles.css
@@ -208,64 +208,92 @@ footer{
 /* -----------------------------muestrario---------------------------- */
 
 
-.galeria{
+#galeria{
     display: grid;
     justify-content: center;
-
-    grid-gap: 0.2em;
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 
 
 @media(min-width:1024px){
     .galeria{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(3, 364px);
+        grid-template-rows: repeat(5, 261px);
+
     }
     .g-img-1{
         border: solid;
-        grid-column: 1/3;
+        grid-column: 1/2;
         grid-row: 1/3;
+        width: 717px;
+        height: 461px;
+        object-fit: cover;
     }
     .g-img-2{
         border: solid;
-        grid-column: 3/4;
+        grid-column: 2/4;
         grid-row: 1/2;
+        width: 734px;
+        height: 231px;
+        object-fit: cover;
     }
     .g-img-3{
         border: solid;
-        grid-column: 3/4;
+        grid-column: 2/4;
         grid-row: 2/3;
+        width: 734px;
+        height: 231px;
+        object-fit: cover;
     }
     .g-img-4{
         border: solid;
         grid-column: 1/4;
         grid-row: 3/4;
+        width: 100%;
+        height: 100px;
+        object-fit: cover;
     }
     .g-img-5{
         border: solid;
         grid-column: 1/2;
         grid-row: 4/5;
+        width: 723px;
+        height: 261px;
+        object-fit: cover;
     }
     .g-img-6{
         border: solid;
         grid-column: 2/4;
         grid-row: 4/5;
+        width: 361px;
+        height: 261px;
+        object-fit: cover;
     }
     .g-img-7{
         border: solid;
         grid-column: 1/2;
         grid-row: 5/6;
+        width: 360px;
+        height: 261px;
+        object-fit: cover;
     }
     .g-img-8{
         border: solid;
         grid-column: 2/3;
         grid-row: 5/6;
+        width: 360px;
+        height: 261px;
+        object-fit: cover;
     }
     .g-img-9{
         border: solid;
         grid-column: 3/4;
         grid-row: 5/6;
+        width: 360px;
+        height: 261px;
+        object-fit: cover;
     }
 
 
