--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     padding: 0 auto;
     box-sizing: border-box;
     font-family: open;
+
 }
 
 /*    #FFFFFF        #F6F3EF     #CB673E        #BC4C2A   */
@@ -206,118 +207,215 @@ footer{
 
 
 /* -----------------------------muestrario---------------------------- */
+.mainMuestrario{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    max-width: 100%;
+}
 
+.tituloMuestrario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    font-size: 4em;
+}
 
 #galeria{
     display: grid;
     justify-content: center;
-    justify-items: stretch;
-    align-items: stretch;
+    grid-gap: 1em;
 }
 
-
+#galeria img{
+    height: 25em;
+    border-radius: 5em;
+    object-fit: cover;
+    width: 100%;
+}
 
 @media(min-width:1024px){
-    .galeria{
-        grid-template-columns: repeat(3, 364px);
-        grid-template-rows: repeat(5, 261px);
-
+    #galeria{
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, 1fr);
     }
     .g-img-1{
-        border: solid;
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 1/3;
-        width: 717px;
-        height: 461px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-2{
-        border: solid;
-        grid-column: 2/4;
+        grid-column: 3/4;
         grid-row: 1/2;
-        width: 734px;
-        height: 231px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-3{
-        border: solid;
-        grid-column: 2/4;
+        grid-column: 3/4;
         grid-row: 2/3;
-        width: 734px;
-        height: 231px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-4{
-        border: solid;
         grid-column: 1/4;
         grid-row: 3/4;
         width: 100%;
-        height: 100px;
-        object-fit: cover;
+        height: 25em;
+        background-image:url(../assets/img/galeria\ 4.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
     }
     .g-img-5{
-        border: solid;
         grid-column: 1/2;
         grid-row: 4/5;
-        width: 723px;
-        height: 261px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-6{
-        border: solid;
         grid-column: 2/4;
         grid-row: 4/5;
-        width: 361px;
-        height: 261px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-7{
-        border: solid;
         grid-column: 1/2;
         grid-row: 5/6;
-        width: 360px;
-        height: 261px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-8{
-        border: solid;
         grid-column: 2/3;
         grid-row: 5/6;
-        width: 360px;
-        height: 261px;
-        object-fit: cover;
+        width: 100%;
     }
     .g-img-9{
-        border: solid;
         grid-column: 3/4;
         grid-row: 5/6;
-        width: 360px;
-        height: 261px;
-        object-fit: cover;
-    }
-
-
-
-
-
-}
-
-@media (min-width: 360px) and (max-width: 767px) {
-    .galeria{
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(8, 1);
-        grid-gap: 1em;
+        width: 100%;
     }
 }
-
 
 
 @media (min-width: 768px) and (max-width: 1023px) {
-    .galeria{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+    #galeria{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+    }
+    #galeria img{
+        border-radius: 3em;
+    }
+    .g-img-1{
+        grid-column: 1/3;
+        grid-row: 1/3;
+        width: 100%;
+    }
+    .g-img-2{
+        grid-column: 3/4;
+        grid-row: 1/2;
+        width: 100%;
+    }
+    .g-img-3{
+        grid-column: 1/4;
+        grid-row: 2/3;
+        width: 100%;
+    }
+    .g-img-4{
+        grid-column: 1/4;
+        grid-row: 3/4;
+        width: 100%;
+        height: 25em;
+        background-image:url(../assets/img/galeria\ 4.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+    .g-img-5{
+        grid-column: 1/2;
+        grid-row: 4/5;
+        width: 100%;
+    }
+    .g-img-6{
+        grid-column: 2/4;
+        grid-row: 4/5;
+        width: 100%;
+    }
+    .g-img-7{
+        grid-column: 1/2;
+        grid-row: 5/6;
+        width: 100%;
+    }
+    .g-img-8{
+        grid-column: 2/3;
+        grid-row: 5/6;
+        width: 100%;
+    }
+    .g-img-9{
+        grid-column: 3/4;
+        grid-row: 5/6;
+        width: 100%;
     }
 }
+
+
+@media (min-width: 360px) and (max-width: 767px) {
+    #galeria{
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+    }
+    #galeria img{
+        border-radius: 2em;
+    }
+    .g-img-1{
+        grid-column: 1/3;
+        grid-row: 1/3;
+    }
+    .g-img-2{
+        grid-column: 3/4;
+        grid-row: 1/2;
+
+    }
+    .g-img-3{
+        grid-column: 1/4;
+        grid-row: 2/3;
+    }
+    .g-img-4{
+        grid-column: 1/4;
+        grid-row: 3/4;
+        width: 100%;
+        height: 25em;
+        background-image:url(../assets/img/galeria\ 4.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+    }
+    .g-img-5{
+        grid-column: 1/2;
+        grid-row: 4/5;
+    }
+    .g-img-6{
+        grid-column: 2/4;
+        grid-row: 4/5;
+    }
+    .g-img-7{
+        grid-column: 1/2;
+        grid-row: 5/6;
+    }
+    .g-img-8{
+        grid-column: 2/3;
+        grid-row: 5/6;
+    }
+    .g-img-9{
+        grid-column: 3/4;
+        grid-row: 5/6;
+    }
+}
+
+
+
+
 
 
 
