--- a/css/styles.css
+++ b/css/styles.css
@@ -1,37 +1,35 @@
 
 *{
-    margin: 0 auto;
-    padding: 0 auto;
+    margin: auto;
+    padding: 0;
     box-sizing: border-box;
     font-family: open;
+    max-width: 100%;
 }
 
 /*    #FFFFFF        #F6F3EF     #CB673E        #BC4C2A   */
 
 body{
+    display: flex;
+    flex-direction: column;
     background-color: #F6F3EF;
-    
 }   
 
 
 
 
 /* nav------------------------------------------------------------------------------------ */
+#navM{
+    display: none;
+}
 
 .logoInicio{
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
 nav{
-    z-index: 2;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items:center;
-    flex-wrap: nowrap;
-    font-size: 1.4em;
-    margin-top: 2em;
+    margin-top: 3em;
 }
 
 .menu-horizontal{
@@ -54,6 +52,7 @@ nav{
     align-items: center;
     color: #BC4C2A;
     text-decoration: none;
+    font-size: 1.4rem;
 }
 .menu-horizontal >li:hover{
     background-color: #e9e6e3;
@@ -82,6 +81,14 @@ nav{
     margin: 3px;
     border-bottom: solid 1px;
 }
+.imagenNav{
+    display: flex;
+    flex-direction: column; 
+}
+
+.imagenNav img{
+    width: 10em;
+}
 
 /* footer--------------------------------------------------------------------------------- */
 footer{
@@ -98,20 +105,27 @@ footer{
 
 
 /* index---------------------------------------------------------------------------------- */
+
+
+
 #carouselExampleIndicators{
     margin-top: 5em;
     box-shadow: 0px 0px 12px 0px grey;
+    width: 100%;
+    height: 60vh;
 }
+
 #carouselExampleIndicators .carousel-inner img{
-    height: 40em;
     object-fit: cover;
+    width: 100%;
+    height: 60vh;
 }
 
 .productosIndex{
     display: flex;
     justify-content: center;
-    margin-bottom: 1em;
-    margin-top: 3em;
+    margin-bottom: 2em;
+    margin-top: 2em;
     font-size: 3.5em;
     color: #BC4C2A;
 }
@@ -120,17 +134,20 @@ footer{
 
 #muestraInicio{
     display: flex;
-    flex-direction: row;
-    justify-content:center;
-    margin-bottom: 5em;
-    padding: 2em;
-    width: 80em;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
+.galeriaInicio{
+    display: grid;
+    align-items: flex-end;
+    width: 100%;
+}
 
 #muestraInicio img{
     object-fit: cover;
-    width: 32em;
+    width: 24em;
     height: 20em;
     margin: 20px;
     border-radius: 2em;
@@ -144,10 +161,7 @@ footer{
     -webkit-transform: scale(1.02);
     transform: scale(1.02);
 }
-.galeriaInicio{
-    display: grid;
-    align-items: flex-end;
-}
+
 
 
 
@@ -167,11 +181,15 @@ footer{
 }
 .textoInicio{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: 1.3em;
+    font-size: 2em;
     flex-wrap: wrap;
     width: 23em;
+}
+.textoInicio h1{
+    font-size: 1.6em;
 }
 
 
@@ -281,7 +299,7 @@ footer{
 
 #galeria img{
     height: 25em;
-    border-radius: 5em;
+    border-radius: 2em;
     object-fit: cover;
     width: 100%;
 }
@@ -331,26 +349,28 @@ footer{
 @media(min-width:1024px){
     /*muestrario*/
     #galeria{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(6, 1fr);
     }
+    
+.g-img-0{
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
     .g-img-1{
         grid-column: 1/3;
-        grid-row: 1/3;
-        width: 100%;
+        grid-row: 2/3;
     }
     .g-img-2{
-        grid-column: 3/4;
+        grid-column: 3/5;
         grid-row: 1/2;
-        width: 100%;
     }
     .g-img-3{
-        grid-column: 3/4;
+        grid-column: 3/5;
         grid-row: 2/3;
-        width: 100%;
     }
     .g-img-4{
-        grid-column: 1/4;
+        grid-column: 1/5;
         grid-row: 3/4;
         width: 100%;
         height: 25em;
@@ -362,34 +382,34 @@ footer{
         border-radius: 5em;
     }
     .g-img-5{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 4/5;
-        width: 100%;
     }
     .g-img-6{
-        grid-column: 2/4;
+        grid-column: 3/5;
         grid-row: 4/5;
-        width: 100%;
     }
     .g-img-7{
-        grid-column: 1/2;
+        grid-column: 1/3;
         grid-row: 5/6;
-        width: 100%;
     }
     .g-img-8{
-        grid-column: 2/3;
+        grid-column: 3/5;
         grid-row: 5/6;
-        width: 100%;
     }
     .g-img-9{
-        grid-column: 3/4;
-        grid-row: 5/6;
-        width: 100%;
+        grid-column: 1/5;
+        grid-row: 6/7;
     }
     /*index*/
     .galeriaInicio{
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr) 8em;
+        gap: 1em;
+    }
+    #muestraInicio img{
+        width: 28em;
+        height: 20em;
     }
     .galeriaInicio .img1{
         grid-column: 1/2;
@@ -420,35 +440,44 @@ footer{
         grid-column: 2/3;
         grid-row: 3/4;
     }
+
+    #infoInicio .textoInicio h1{
+        font-size: 1.3em;
+    }
+
     /*telas*/
 }
 @media (min-width: 768px) and (max-width: 1023px) {
     /*muestrario*/
     #galeria{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
     }
     #galeria img{
         border-radius: 3em;
     }
-    .g-img-1{
-        grid-column: 1/3;
-        grid-row: 1/3;
-        width: 100%;
+    .g-img-0{
+        grid-column: 1/2;
+        grid-row: 1/2;
     }
-    .g-img-2{
-        grid-column: 3/4;
+    .g-img-1{
+        grid-column: 2/3;
         grid-row: 1/2;
         width: 100%;
     }
+    .g-img-2{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        width: 100%;
+    }
     .g-img-3{
-        grid-column: 1/4;
+        grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
     }
     .g-img-4{
-        grid-column: 1/4;
+        grid-column: 1/3;
         grid-row: 3/4;
         width: 100%;
         height: 25em;
@@ -465,7 +494,7 @@ footer{
         width: 100%;
     }
     .g-img-6{
-        grid-column: 2/4;
+        grid-column: 2/3;
         grid-row: 4/5;
         width: 100%;
     }
@@ -480,123 +509,11 @@ footer{
         width: 100%;
     }
     .g-img-9{
-        grid-column: 3/4;
-        grid-row: 5/6;
+        grid-column: 1/3;
+        grid-row: 6/7;
         width: 100%;
     }
 
-    /*index*/
-    .galeriaInicio{
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr) 8em;
-    }
-    #muestraInicio img{
-        width: 25em;
-        height: 13em;
-    }
-    .galeriaInicio .img1{
-        grid-column: 1/2;
-        grid-row: 1/2;
-    }
-    .galeriaInicio .img2{
-        grid-column: 2/3;
-        grid-row: 1/2;
-    }
-    .galeriaInicio .img3{
-        grid-column: 1/2;
-        grid-row: 2/3;
-    }
-    .galeriaInicio .img4{
-        grid-column: 2/3;
-        grid-row: 2/3;
-    }
-    .galeriaInicio .img5{
-        grid-column: 1/2;
-        grid-row: 3/4;
-    }
-    .galeriaInicio .img6{
-        grid-column: 2/3;
-        grid-row: 3/4;
-    }
-    .galeriaInicio .verMas{
-        padding: 1em 3em 1em 3em;
-        grid-column: 1/3;
-        grid-row: 4/5;
-    }
-    /*telas*/
-    #infoTelas{
-        flex-direction: column;
-        justify-content: flex-start;
-        width: 100%;
-        flex-wrap: wrap;
-    }
-    #infoTelas .imgTela{
-        width: 55em;
-    }
-    #infoTelas .info h2{
-        margin: 0;
-        font-size: 5em;
-    }
-    #infoTelas .info p{
-        margin: 0;
-        font-size: 2em;
-        flex-wrap: nowrap;
-    }
-}
-@media (min-width: 360px) and (max-width: 767px) {
-    /*muestrario*/
-    #galeria{
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(5, 1fr);
-    }
-    #galeria img{
-        border-radius: 2em;
-    }
-    .g-img-1{
-        grid-column: 1/3;
-        grid-row: 1/3;
-    }
-    .g-img-2{
-        grid-column: 3/4;
-        grid-row: 1/2;
-
-    }
-    .g-img-3{
-        grid-column: 1/4;
-        grid-row: 2/3;
-    }
-    .g-img-4{
-        grid-column: 1/4;
-        grid-row: 3/4;
-        width: 100%;
-        height: 25em;
-        background-image:url(../assets/img/galeria\ 4.jpg);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
-        background-attachment: fixed;
-        border-radius: 5em;
-    }
-    .g-img-5{
-        grid-column: 1/2;
-        grid-row: 4/5;
-    }
-    .g-img-6{
-        grid-column: 2/4;
-        grid-row: 4/5;
-    }
-    .g-img-7{
-        grid-column: 1/2;
-        grid-row: 5/6;
-    }
-    .g-img-8{
-        grid-column: 2/3;
-        grid-row: 5/6;
-    }
-    .g-img-9{
-        grid-column: 3/4;
-        grid-row: 5/6;
-    }
     /*index*/
     .galeriaInicio{
         grid-template-columns: repeat(2, 1fr);
@@ -604,10 +521,6 @@ footer{
     }
     #muestraInicio img{
         width: 22em;
-        height: 10em;
-    }
-    #muestraInicio img{
-        width: 25em;
         height: 13em;
     }
     .galeriaInicio .img1{
@@ -639,6 +552,18 @@ footer{
         grid-column: 1/3;
         grid-row: 4/5;
     }
+
+    #infoInicio{
+        display: flex;
+        flex-direction: column;
+        margin-top: 4em;
+    }
+
+    #infoInicio .textoInicio h1{
+        font-size: 1.5em;
+        margin-top: 1em;
+    }
+
     /*telas*/
     #infoTelas{
         flex-direction: column;
@@ -646,14 +571,209 @@ footer{
         width: 100%;
         flex-wrap: wrap;
     }
+    #infoTelas .info{
+        width: 90%;
+        margin-top: 3em;
+    }
     #infoTelas .imgTela{
         width: 55em;
     }
     #infoTelas .info h2{
         font-size: 5em;
     }
-    #infoTelas .info p{
-        font-size: 2em;
+    #infoTelas .textoInfo{
         flex-wrap: nowrap;
     }
+    #infoTelas .info h3{
+        margin-top: 0.3em;
+        font-size: 3em;
+    }
+    #infoTelas .info p{
+        font-size: 2em;
+    }
+    #infoTelas .muestraColores{
+        margin-left: 3.6em;
+    }
+}
+@media (min-width: 360px) and (max-width: 767px) {
+    /*nav*/
+
+    #navD{
+        display: none;
+    }
+
+    #navM{
+        display: block;
+        margin: 0;
+        width: 100%;
+    }
+
+    #navM .container-fluid .navbar-brand{
+        width: 5em;
+        margin-right: 1.5em;
+    }
+
+    .productosIndex{
+        font-size: 2.2em;
+    }
+
+    /*muestrario*/
+    #galeria{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+    }
+    #galeria img{
+        border-radius: 1em;
+        height: 16em;
+    }
+    .g-img-0{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .g-img-1{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        width: 100%;
+    }
+    .g-img-2{
+        grid-column: 2/3;
+        grid-row: 2/3;
+        width: 100%;
+    }
+    .g-img-3{
+        grid-column: 1/2;
+        grid-row: 2/3;
+        width: 100%;
+    }
+    .g-img-4{
+        grid-column: 1/3;
+        grid-row: 3/4;
+        width: 100%;
+        height: 16em;
+        background-image:url(../assets/img/galeria\ 4.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        background-attachment: fixed;
+        border-radius: 5em;
+    }
+    .g-img-5{
+        grid-column: 1/2;
+        grid-row: 4/5;
+        width: 100%;
+    }
+    .g-img-6{
+        grid-column: 2/3;
+        grid-row: 4/5;
+        width: 100%;
+    }
+    .g-img-7{
+        grid-column: 1/2;
+        grid-row: 5/6;
+        width: 100%;
+    }
+    .g-img-8{
+        grid-column: 2/3;
+        grid-row: 5/6;
+        width: 100%;
+    }
+    .g-img-9{
+        grid-column: 1/3;
+        grid-row: 6/7;
+        width: 100%;
+    }
+
+    /*index*/
+    .galeriaInicio{
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr) 8em;
+    }
+    #muestraInicio .galeriaInicio img{
+        width: 10.5em;
+        height: 10em;
+        margin: 0.3em;
+    }
+
+    .galeriaInicio .img1{
+        grid-column: 1/2;
+        grid-row: 1/2;
+    }
+    .galeriaInicio .img2{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+    .galeriaInicio .img3{
+        grid-column: 1/2;
+        grid-row: 2/3;
+    }
+    .galeriaInicio .img4{
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+    .galeriaInicio .img5{
+        grid-column: 1/2;
+        grid-row: 3/4;
+    }
+    .galeriaInicio .img6{
+        grid-column: 2/3;
+        grid-row: 3/4;
+    }
+    .galeriaInicio .verMas{
+        padding: 1em 3em 1em 3em;
+        grid-column: 1/3;
+        grid-row: 4/5;
+    }
+
+    #infoInicio{
+        display: flex;
+        flex-direction: column;
+        margin-top: 4em;
+    }
+
+    #infoInicio .imgInicio{
+        width: 20em;
+        margin-bottom: 3em;
+    }
+
+    #infoInicio .textoInicio h1{
+        font-size: 1em;
+    }
+
+    #infoInicio .textoInicio p{
+        font-size: 0.8em;
+    }
+
+
+
+    /*telas*/
+    #infoTelas{
+        flex-direction: column;
+        justify-content: flex-start;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    #infoTelas .info{
+        width: 100%;
+        margin-top: 3em;
+        margin-left: 0;
+    }
+    #infoTelas .imgTela{
+        width: 100%;
+        height: auto;
+    }
+    #infoTelas .textoInfo{
+        flex-wrap: nowrap;
+    }
+    #infoTelas .info h3{
+        margin-top: 0.3em;
+        font-size: 3em;
+    }
+    #infoTelas .info h2{
+        font-size: 3.5em;
+    }
+    #infoTelas .info p{
+        font-size: 2em;
+    }
+
 }
