--- a/css/styles.css
+++ b/css/styles.css
@@ -111,8 +111,7 @@ footer{
 #carouselExampleIndicators{
     margin-top: 5em;
     box-shadow: 0px 0px 12px 0px grey;
-    width: 100%;
-    height: 60vh;
+    width: 90em;
 }
 
 #carouselExampleIndicators .carousel-inner img{
@@ -145,9 +144,9 @@ footer{
     width: 100%;
 }
 
-#muestraInicio img{
+#muestraInicio .galeriaInicio .muestra img{
     object-fit: cover;
-    width: 24em;
+    width: 30em;
     height: 20em;
     margin: 20px;
     border-radius: 2em;
@@ -358,12 +357,12 @@ footer{
     grid-row: 1/2;
 }
     .g-img-1{
-        grid-column: 1/3;
-        grid-row: 2/3;
-    }
-    .g-img-2{
         grid-column: 3/5;
         grid-row: 1/2;
+    }
+    .g-img-2{
+        grid-column: 1/3;
+        grid-row: 2/3;
     }
     .g-img-3{
         grid-column: 3/5;
@@ -379,7 +378,7 @@ footer{
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-        border-radius: 5em;
+        border-radius: 2em;
     }
     .g-img-5{
         grid-column: 1/3;
@@ -446,6 +445,11 @@ footer{
     }
 
     /*telas*/
+
+        /*sobre mi*/
+        .sobreMi {
+            margin-top: 0em;
+        }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
     /*muestrario*/
@@ -467,12 +471,12 @@ footer{
         width: 100%;
     }
     .g-img-2{
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
     }
     .g-img-3{
-        grid-column: 1/2;
+        grid-column: 2/3;
         grid-row: 2/3;
         width: 100%;
     }
@@ -486,7 +490,7 @@ footer{
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-        border-radius: 5em;
+        border-radius: 2em;
     }
     .g-img-5{
         grid-column: 1/2;
@@ -609,8 +613,8 @@ footer{
     }
 
     #navM .container-fluid .navbar-brand{
-        width: 5em;
-        margin-right: 1.5em;
+        width: 6em;
+        margin-right: 6em;
     }
 
     .productosIndex{
@@ -637,12 +641,12 @@ footer{
         width: 100%;
     }
     .g-img-2{
-        grid-column: 2/3;
+        grid-column: 1/2;
         grid-row: 2/3;
         width: 100%;
     }
     .g-img-3{
-        grid-column: 1/2;
+        grid-column: 2/3;
         grid-row: 2/3;
         width: 100%;
     }
@@ -656,7 +660,7 @@ footer{
         background-position: center;
         background-size: cover;
         background-attachment: fixed;
-        border-radius: 5em;
+        border-radius: 2em;
     }
     .g-img-5{
         grid-column: 1/2;
