--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,7 @@ nav{
 .menu-horizontal li{
     display: inline-block;
     position: relative;
-    width: 7em;
+    width: 8em;
 }
 .menu-horizontal > li > a{
     display: flex;
@@ -71,6 +71,7 @@ nav{
 .menu-horizontal li:hover .menu-vertical{
     display: block;
 }
+
 
 .menu-vertical li a{
     display: block;
@@ -106,7 +107,9 @@ footer{
 
 /* index---------------------------------------------------------------------------------- */
 
-
+#carruselM{
+    display: none;
+}
 
 #carouselExampleIndicators{
     margin-top: 5em;
@@ -209,18 +212,6 @@ footer{
     color: green;
 }
 
-.yellow{
-    color: yellow;
-}
-
-.purple{
-    color: purple;
-}
-
-.white{
-    color: white;
-}
-
 
 
 #infoTelas{
@@ -233,7 +224,7 @@ footer{
 #infoTelas .imgTela{
     width: 50em;
     height: 37em;
-    padding: 0.7em 0.7em 0.7em 0.7em;
+    padding: 0.7em;
     background-color: #CB673E;
     border-bottom-right-radius: 4em;
     border-top-left-radius: 4em;
@@ -262,7 +253,7 @@ footer{
 .muestraColores{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr;
     grid-gap: 0.5em;
     width: 15em;
     margin: 0;
@@ -274,9 +265,50 @@ footer{
     margin: 0;
 }
 
+.masTelas{
+    display: flex;
+    text-align: center;
+    margin-top: 10em;
+}
+.masTelas .container{
+    padding: 15px;
+    margin-left: 20px;
+    margin-right: 20px;
+    box-shadow: 0px 0px 5px 0px grey;
+    background-color: #bc4c2a1a;
+}
+.masTelas .container .imgMasTela img{
+    width: 100%;
+    height: 20em;
+    border-bottom-right-radius: 4em;
+    border-top-left-radius: 4em;
+    box-shadow: 0px 0px 12px 0px grey;
+}
+.masTelas .container .datoMasTela{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 1em;
+}
+
+.masTelas .container .datoMasTela a{
+    background-color: #bc4c2a1a;
+    margin: 1em;
+    border-radius: 10px;
+    text-decoration: none;
+    color: black;
+}
+.masTelas .container .datoMasTela a h2{
+    margin: 0;
+}
 
 /* muestrario----------------------------------------------------------------------------- */
-
+.g-img-9-m{
+    display: none;
+}
+.g-img-9-t{
+    display: none;
+}
 .tituloMuestrario{
     display: flex;
     flex-direction: column;
@@ -512,9 +544,15 @@ footer{
         width: 100%;
     }
     .g-img-9{
+        display: none;
         grid-column: 1/3;
         grid-row: 6/7;
         width: 100%;
+    }
+    .g-img-9-t{
+        display: block;
+        grid-column: 1/3;
+        grid-row: 6/7;
     }
 
     /*index*/
@@ -596,6 +634,14 @@ footer{
     }
     #infoTelas .muestraColores{
         margin-left: 3.6em;
+    }
+    .masTelas{
+        flex-direction: column;
+        margin-top: 5em;
+    }
+    .masTelas .container{
+        width: 90%;
+        margin: 1em 0 1em 1em;
     }
 }
 @media (min-width: 360px) and (max-width: 767px) {
@@ -682,14 +728,40 @@ footer{
         width: 100%;
     }
     .g-img-9{
+        display: none;
         grid-column: 1/3;
         grid-row: 6/7;
-        width: 100%;
+    }
+    .g-img-9-m{
+        display: block;
+        grid-column: 1/3;
+        grid-row: 6/7;
+    }
+    .g-img-9-t{
+        display: none;
     }
 
     /*index*/
+
+    #carrusel{
+        display: none;
+    }
+
+    #carruselM{
+        display:block;
+        margin-top: 5em;
+    }
+
+    #carruselM #carouselExampleIndicatorsM{
+        width: 100%;
+        height: auto;
+    }
+
+    #carruselM #carouselExampleIndicatorsM .carousel-indicators{
+        margin-bottom: 0;
+    }
     
-    #carouselExampleIndicators .carousel-inner img{
+    #carruselM #carouselExampleIndicators .carousel-inner img{
         object-fit: cover;
         width: 100%;
     }
@@ -699,11 +771,13 @@ footer{
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr) 8em;
         gap: 1em;
-
     }
-    #muestraInicio .galeriaInicio .muestra img{
+    #muestraInicio{
+        margin: 0;
+    }
+    #muestraInicio .galeriaInicio .muestra a img{
         height: auto;
-        max-width: 80%;
+        width: 80%;
     }
     .galeriaInicio .img1{
         grid-column: 1/2;
@@ -757,6 +831,7 @@ footer{
 
 
     /*telas*/
+
     #infoTelas{
         flex-direction: column;
         justify-content: flex-start;
@@ -786,9 +861,17 @@ footer{
         font-size: 2em;
     }
 
+    .masTelas{
+        flex-direction: column;
+        margin-top: 3em;
+    }
+    .masTelas .container{
+        width: 90%;
+        margin: 1em 0 1em 1em;
+    }
+
     /*contacto*/
     .contacto{
         margin-top: 9em;
     }
-
 }
